k8s/argocd/overlays/dev/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc
spec:
  type: ClusterIP
  selector:
    app: helloworld
  ports:
  - name: web
    port: 8000
    protocol: TCP
    targetPort: web
