k8s/argocd/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/managed: 'true'
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    app: helloworld
  name: helloworld-ingress
spec:
  rules:
    - host: hellopy.scimetic.di.works
      http:
        paths:
          - backend:
              service:
                name: dev-helloworld-svc
                port:
                  name: web
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hellopy.scimetic.di.works
      secretName: hellopy-certificate-secret
